<resources>
    <string name="app_name">GeomHelper</string>
    <string name="settings">Настройки</string>
    <string name="leaderboard">Лидеры</string>
    <string name="profile">Профиль</string>
    <string name="courses">Курсы</string>
    <string name="tests">Тесты</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ProfileImage">Profile Image</string>
    <string name="title_activity_login">Добро пожаловать</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="SignIn">Войти</string>
    <string name="SignUp">Зарегистрироваться</string>
    <string name="Password">Password</string>
    <string name="Name">Имя</string>
    <string name="Error">Случилась непридведенная ошибка</string>
    <string name="_7"><![CDATA[< < - - - - - - 7 класс - - - - - - > >]]></string>
    <string name="_8"><![CDATA[< < - - - - - - 8 класс - - - - - - > >]]></string>
    <string name="_9"><![CDATA[< < - - - - - - 9 класс - - - - - - > >]]></string>
    <string name="test_1">Начальные геометрические сведения</string>
    <string name="test_2">Треугольники</string>
    <string name="test_3">Параллельные прямые</string>
    <string name="test_4">Соотношения между сторонами и углами ▲</string>
    <string name="email">Email</string>
    <string name="name_or_nickname">Имя или ник</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="not_register"><u>Еще не зарегестрированы?</u></string>
    <string name="testname">TestName</string>
    <string name="confirm_password">Confirm password</string>
    <string name="search_icon">Search icon</string>
    <string name="search">Поиск темы</string>
    <string name="testimage">TestImage</string>
    <string name="start_2">start_2</string>
    <string name="start_1">start_1</string>
    <string name="start">start</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="learn_new">Узнать новое</string>
    <string name="practise_new">Закрепить старое</string>
    <string name="lets_begin">Давайте начнем</string>
    <string name="success">И добиться успеха</string>
    <string name="begin">Начните, чтобы</string>
    <string name="social">vk</string>
    <string name="facebook_app_id">1059877860841352</string>
    <string name="fb_login_protocol_scheme">fb1059877860841352</string>
    <string name="server_client_id">1021657095056-0g139d0uof3m7q25jc2aaei1naridfdj.apps.googleusercontent.com</string>
    <string name="task_1">Задание 1</string>
    <string name="choose">Какое-то там задание на выбор ванианта ответа</string>
    <string name="_1">Вариант 1</string>
    <string name="_2">Вариант 2</string>
    <string name="_3">Вариант 3</string>
    <string name="cont">Продолжить</string>
    <string name="task2">Задание 2</string>
    <string name="c">Какое-то там задание c простыми теоремами и вычислениями</string>
    <string name="answer">Ответ</string>
    <string name="task3">Задание 3</string>
    <string name="paint">Какое-то там задание, которое надо будет нарисовать(вместо картинки должно быть поле рисования)</string>
    <string name="end">Закончить</string>
    <string name="results">Тест завершен!</string>
    <string name="correct">correct</string>
    <string name="soc">social</string>
    <string name="type_pass">Действующий пароль</string>
    <string name="new_email">Новый Email</string>
    <string name="new_password">Новый пароль</string>
    <string name="check_password">Повторите новый пароль</string>
    <string name="teorems">Теоремы</string>
    <string name="definitions">Термины</string>
    <string name="achievements">Достижения</string>
    <string name="theorem">теорема</string>
    <string name="friends">Друзья</string>
    <string name="no_courses">Для вас нет доступных курсов</string>
    <string name="achievement_done">Ты выполнил достижение! +</string>
    <string name="xp">xp</string>
    <string name="param_courses">courses</string>
    <string name="can_not_send_data">Не удалось отправить данные на сервер</string>
    <string name="error_signin_facebook">Произошла ошибка при попытке входа через Facebook</string>
    <string name="fill_in">Заполните поле</string>
    <string name="too_short_password">Пароль не может быть меньше 6 символов!</string>
    <string name="loading">Загрузка...</string>
    <string name="error">Произошла ошибка!</string>
    <string name="person_not_found">Такого пользователя не существует!</string>
    <string name="wrong_password">Неверный пароль!</string>
    <string name="welcome1">Добро пожаловать,</string>
    <string name="welcome2">Добро пожаловать!</string>
    <string name="error_signin_vk">Произошла ошибка при входе через VK</string>
    <string name="can_not_load_image">Не удалось загрузить картинку!</string>
    <string name="error_signin_google">Произошла ошибка при входе через Google</string>
    <string name="lost_connection">Связь потеряна</string>
    <string name="passwords_incorrect">Пароли не совпадают</string>
    <string name="email_is_busy">Пользователь с таким email уже зарегестрирован!</string>
    <string name="add_courses">Добавь курсы: 4</string>
    <string name="do_tests">Пройди тесты: 2</string>
    <string name="do_tests_dumb">Пройди тесты в тренажере: 5</string>
    <string name="get_xp">Набери опыт: 50</string>
    <string name="share_app">Поделись приложением</string>
    <string name="wrong_theme">Такой темы не существует.</string>
    <string name="add_course">Добавьте курс</string>
    <string name="deleting_course">Удаление курса</string>
    <string name="delete_course">Вы точно хотите удалить данный курс?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="on">Включен</string>
    <string name="basic_geom_knowledwes">Начальные геометрические сведения</string>
    <string name="triangles">Треугольники</string>
    <string name="parallel_straights">Параллельные прямые</string>
    <string name="beetween">Соотношения между сторонами и углами треугольника</string>
    <string name="many_angles">Многоугольники</string>
    <string name="square">Площадь</string>
    <string name="same_triangles">Подобие треугольников</string>
    <string name="ring">Окружность</string>
    <string name="search_of_definitions">Поиск определений</string>
    <string name="tests_not_available">Тесты по данной теме закончились или недоступны</string>
    <string name="ok">ОК</string>
    <string name="correct_answer">Правильный ответ :</string>
    <string name="correct_answers">Правильные ответы :</string>
    <string name="can_not_send_name">Не удалось отправить имя на сервер</string>
    <string name="off">Выключен</string>
    <string name="auto">Авто</string>
    <string name="share">Поделиться</string>
    <string name="download_app">Скачай приложение GeomHelper! Оно поможет тебе в изучении геометрии по школьной программе!</string>
    <string name="whats_new">Добавлен стартовый экран.\n
                        Добавлена возможность входа через социальные сети.\n
                        Добавлены тесты, а также переписан полностью сервер.\n
                        Добавлено множество анимаций.\n
                        Добавлена возможность смены email и пароля.\n
                        Обновлены разделы в настройках.\n</string>
    <string name="app_done">Проект написан Ильей Майером и Мирославой Чобитько.</string>
    <string name="about_authors">Об авторах</string>
    <string name="about">О приложении</string>
    <string name="about_app">У многих школьников возникают проблемы с изучением такого непростого предмета, как геометрия.\n
                        \n
                        Идея нашего проекта заключается в создании простого в понимании интерактивного учебника с разнообразными тестами и заданиями, который поможет решить эту проблему. \n
                        \n
                        Так же мы хотим реализовать турнирную таблицу, чтобы каждый пользователь мог наблюдать не только за своими успехами, но и за успехами других людей.\n
               </string>
    <string name="exit">Выход из аккаунта</string>
    <string name="are_you_sure">Вы действительно хотите выйти из аккаунта?</string>
    <string name="no">Нет</string>
    <string name="can_not_change_email">Нельзя изменить Email при входе через социальные сети.</string>
    <string name="change_email">Смена Email</string>
    <string name="void_email">Вы ввели пустой Email</string>
    <string name="error_on_server">Произошла ошибка на сервере!</string>
    <string name="this_email_is_busy">Данный Email уже занят.</string>
    <string name="changed_email">Email изменен!</string>
    <string name="can_not_change_password">Нельзя изменить пароль при входе через социальные сети.</string>
    <string name="change_password">Смена пароля</string>
    <string name="void_pass">Вы ввели пустой пароль</string>
    <string name="passwords_not_correct">Пароли не совпадают</string>
    <string name="changed_pass">Пароль изменен!</string>
    <string name="you_havent_pass_tests">Вы еще не прошли ни одного теста</string>
    <string name="search_theorems">Поиск теорем</string>
    <string name="do_sth">Ты уже давно не занимался!</string>
    <string name="remember_me">Запомнить меня</string>
    <integer name="com_vk_sdk_AppId">6314062</integer>

</resources>
