<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task3"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewT31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/editText31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/answer"
                android:inputType="text" />

            <TextView
                android:id="@+id/textViewT32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/editText32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/answer"
                android:inputType="text" />

            <TextView
                android:id="@+id/textViewT33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/editText33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/answer"
                android:inputType="text" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/sm" />

        <Button
            android:id="@+id/buttonEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/end" />

    </LinearLayout>

</ScrollView>
